proyecto1/src/objects/Intervenci_n__c.object
<CustomObject>
    <fields>
        <fullName>Cliente_del_proyecto__c</fullName>
        <formula>Proyecto__r.Cliente__c</formula>
        <label>Cliente del proyecto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FolderId__c</fullName>
        <label>FolderId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_de_elementos_de_intervenci_n_abiertos__c</fullName>
        <label>Nº de elementos de intervención abiertos</label>
        <summaryForeignKey>Elemento_intervencion__c.Intervenci_n__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>N_de_elementos_de_intervenci_n_cerrados__c</fullName>
        <label>Nº de elementos de intervención cerrados</label>
        <summaryFilterItems>
            <field>Elemento_intervencion__c.Estado__c</field>
            <operation>equals</operation>
            <value>cerrado</value>
        </summaryFilterItems>
        <summaryForeignKey>Elemento_intervencion__c.Intervenci_n__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>N_de_elementos_de_intervenci_n_retrasad__c</fullName>
        <label>Nº de elementos de intervención retrasad</label>
        <summaryFilterItems>
            <field>Elemento_intervencion__c.Estado__c</field>
            <operation>equals</operation>
            <value>retrasado</value>
        </summaryFilterItems>
        <summaryForeignKey>Elemento_intervencion__c.Intervenci_n__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>N_total_de_elementos_de_intervenci_n__c</fullName>
        <label>Nº total de elementos de intervención</label>
        <summaryForeignKey>Elemento_intervencion__c.Intervenci_n__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Proveedor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Proveedor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Proveedor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Intervenciones</relationshipLabel>
        <relationshipName>Intervenciones1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proyecto__c</fullName>
        <label>Proyecto</label>
        <referenceTo>Proyecto__c</referenceTo>
        <relationshipLabel>Intervenciones</relationshipLabel>
        <relationshipName>Intervenciones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>avance__c</fullName>
        <formula>N_de_elementos_de_intervenci_n_cerrados__c/ N_total_de_elementos_de_intervenci_n__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% avance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Intervención</label>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>Nombre de Intervención</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intervenciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>